changed student name to a number

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Jake-2025-Super-Bowl-2025-Assignment</title>
+    <title>6-2025-Super-Bowl-2025-Assignment</title>
   </head>
   <body>
     <h1 id="top">Super Bowl 2025</h1>
@@ -91,7 +91,7 @@ With a strong offensive and defensive core, they aim to win another Super Bowl i
 
 
     🔝 <a href="#top">Back to Top</a> 🔝
-    <p>This webpage was developed by: Jake-2025</p>
+    <p>This webpage was developed by: 6-2025</p>
     
   </body>
 </html>
